--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "grunt-contrib-connect": "0.1.x",
     "grunt-contrib-watch": "0.2.x",
     "grunt-contrib-requirejs": "0.4.0rc7",
-    "grunt-contrib-handlebars": "git+https://github.com/pulse00/grunt-contrib-handlebars.git#module-fork",
+    "grunt-contrib-handlebars": "0.5.2rc7",
     "grunt-coffeelint": "0.0.x",
     "grunt-urequire": "0.1.x",
     "grunt-bower-task": "0.1.x"
